Implement Firebase Auth in Login and Signup activity
To get basic auth user info.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
+        android:onClick="logIn"
         android:text="@string/action_login"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
