--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,17 +48,14 @@
             android:text="@string/prompt_create_displayname"
             android:textAlignment="viewEnd" />
 
-        <EditText
-            android:id="@+id/editTextDisplayName"
+        <TextView
+            android:id="@+id/textViewDisplayName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
             android:layout_weight="2"
-            android:editable="false"
-            android:ems="10"
-            android:enabled="false"
-            android:inputType="textPersonName"
-            android:text="@string/prompt_create_displayname" />
+            android:text="@string/prompt_create_displayname"
+            android:textSize="18sp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -79,15 +76,13 @@
             android:text="Birthday"
             android:textAlignment="viewEnd" />
 
-        <EditText
-            android:id="@+id/editTextBirthday"
+        <TextView
+            android:id="@+id/textViewBirthday"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
             android:layout_weight="2"
-            android:ems="10"
-            android:enabled="false"
-            android:inputType="date" />
+            android:text="1980-04-10"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
@@ -108,16 +103,13 @@
             android:text="Participate Study"
             android:textAlignment="viewEnd" />
 
-        <EditText
-            android:id="@+id/editTextStudyName"
+        <TextView
+            android:id="@+id/textViewStudyName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
             android:layout_weight="2"
-            android:ems="10"
-            android:enabled="false"
-            android:inputType="textPersonName"
-            android:text="Study Name" />
+            android:text="STUDY NAME"
+            android:textSize="18sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -140,8 +132,7 @@
         <LinearLayout
             android:id="@+id/linearLayoutVisitDate"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="5dp"
+            android:layout_height="wrap_content"
             android:layout_weight="2"
             android:orientation="vertical" />
 
