--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,6 @@
         android:id="@+id/imageViewAvatar"
         android:layout_width="128dp"
         android:layout_height="128dp"
-        android:layout_marginTop="5dp"
         android:contentDescription="@string/avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -34,7 +33,7 @@
         android:id="@+id/linearLayoutDisplayName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar"
         tools:layout_editor_absoluteX="184dp">
@@ -44,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="@string/prompt_create_displayname"
             android:textAlignment="viewEnd" />
 
@@ -52,7 +51,7 @@
             android:id="@+id/textViewDisplayName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:text="@string/prompt_create_displayname"
             android:textSize="18sp" />
 
@@ -72,7 +71,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="Birthday"
             android:textAlignment="viewEnd" />
 
@@ -80,7 +79,7 @@
             android:id="@+id/textViewBirthday"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:text="1900-01-01"
             android:textSize="18sp" />
 
@@ -99,7 +98,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="Participate Study"
             android:textAlignment="viewEnd" />
 
@@ -107,7 +106,7 @@
             android:id="@+id/textViewStudyName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:text="STUDY NAME"
             android:textSize="18sp" />
     </LinearLayout>
@@ -125,16 +124,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="Visit Plan"
             android:textAlignment="viewEnd" />
 
-        <LinearLayout
-            android:id="@+id/linearLayoutVisitDate"
+        <TextView
+            android:id="@+id/textViewVisitPlan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:orientation="vertical" />
+            android:layout_weight="3" />
 
     </LinearLayout>
 
