Create a fragment for profile and add into bottom tab HomeActivity

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,6 +12,12 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
+        android:id="@+id/navigation_profile"
+        android:name="aivie.developer.aivie.ui.profile.ProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/fragment_profile" />
+
+    <fragment
         android:id="@+id/navigation_dashboard"
         android:name="aivie.developer.aivie.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
