Update autofillHints constant string by SDK definition
Reference link as follow.
https://developer.android.com/reference/android/view/View.html#setAutofillHints(java.lang.String...)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:autofillHints="username"
+        android:autofillHints="emailAddress"
         android:ems="10"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
@@ -42,7 +42,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:autofillHints="username"
+        android:autofillHints="password"
         android:ems="10"
         android:hint="@string/prompt_password"
         android:inputType="textPassword"
