--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:autofillHints="last name"
+        android:autofillHints="name"
         android:ems="10"
         android:hint="@string/prompt_create_last_name"
         android:inputType="textPersonName"
@@ -41,7 +41,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:autofillHints="first name"
+        android:autofillHints="name"
         android:ems="10"
         android:hint="@string/prompt_create_first_name"
         android:inputType="textPersonName"
@@ -57,7 +57,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:autofillHints="display name"
+        android:autofillHints="name"
         android:ems="10"
         android:hint="@string/prompt_create_display_name"
         android:inputType="textPersonName"
@@ -73,7 +73,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:autofillHints="username"
+        android:autofillHints="emailAddress"
         android:ems="10"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
@@ -90,7 +90,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:autofillHints="username"
+        android:autofillHints="password"
         android:ems="10"
         android:hint="@string/prompt_password"
         android:inputType="textPassword"
