--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
+            android:importantForAutofill="no"
             android:ems="10"
             android:enabled="false"
             android:hint="@string/subject_number"
@@ -33,6 +34,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
+            android:autofillHints="name"
             android:ems="10"
             android:enabled="false"
             android:hint="@string/prompt_create_last_name"
@@ -45,6 +47,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
+            android:autofillHints="name"
             android:ems="10"
             android:enabled="false"
             android:hint="@string/prompt_create_first_name"
@@ -57,6 +60,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
+            android:autofillHints="name"
             android:ems="10"
             android:enabled="false"
             android:hint="@string/prompt_create_display_name"
@@ -69,7 +73,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
-            android:autofillHints="username"
+            android:autofillHints="emailAddress"
             android:ems="10"
             android:enabled="false"
             android:fadeScrollbars="true"
@@ -84,6 +88,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
+            android:importantForAutofill="no"
             android:ems="10"
             android:enabled="false"
             android:hint="@string/date_of_birth"
@@ -96,6 +101,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
+            android:importantForAutofill="no"
             android:ems="10"
             android:enabled="false"
             android:hint="@string/age"
@@ -108,6 +114,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
+            android:importantForAutofill="no"
             android:ems="10"
             android:enabled="false"
             android:hint="@string/ethnicity"
@@ -120,6 +127,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
+            android:importantForAutofill="no"
             android:ems="10"
             android:enabled="false"
             android:hint="@string/race"
