--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -90,8 +90,8 @@
             android:layout_marginEnd="24dp"
             android:importantForAutofill="no"
             android:ems="10"
-            android:enabled="false"
-            android:hint="@string/date_of_birth"
+            android:focusable="false"
+            android:hint="@string/ddmmyyyy"
             android:inputType="date" />
 
         <EditText
