--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,15 +44,41 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
             android:layout_weight="2"
-            android:text="@string/display_name"
+            android:text="@string/name"
             android:textAlignment="viewEnd" />
 
         <TextView
-            android:id="@+id/textViewDisplayName"
+            android:id="@+id/textViewName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:text="@string/display_name"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayoutRole"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutDisplayName"
+        tools:layout_editor_absoluteX="184dp">
+
+        <TextView
+            android:id="@+id/Role"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:layout_weight="2"
+            android:text="@string/firestore_users_role"
+            android:textAlignment="viewEnd" />
+
+        <TextView
+            android:id="@+id/textViewRole"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -63,7 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutDisplayName">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutRole">
 
         <TextView
             android:id="@+id/participateStudy"
