--- a/app/src/main/res/layout/activity_race_selection.xml
+++ b/app/src/main/res/layout/activity_race_selection.xml
@@ -81,6 +81,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="36dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginBottom="48dp"
             android:text="@string/confirm" />
 
 
