Add touch listener of race edit view to go to RaceSelectionActivity

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -257,6 +257,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:enabled="true"
+                android:focusable="false"
                 android:hint="@string/race"
                 android:importantForAutofill="no"
                 android:inputType="textPersonName" />
