--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -52,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:text="@string/signed_icf"
+                android:text="@string/eIcf"
                 android:textAlignment="viewEnd" />
 
             <EditText
@@ -65,7 +65,35 @@
                 android:ems="10"
                 android:enabled="true"
                 android:focusable="false"
-                android:hint="@string/signed_icf"
+                android:hint="@string/eIcf"
+                android:importantForAutofill="no"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewIcfSignature"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="@string/eIcf_signed"
+                android:textAlignment="viewEnd" />
+
+            <EditText
+                android:id="@+id/icf_signature"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:enabled="true"
+                android:focusable="false"
+                android:hint="@string/eIcf_signed"
                 android:importantForAutofill="no"
                 android:inputType="textPersonName" />
         </LinearLayout>
